# MRPTree

./: .gitignore  CMakeLists.txt  Doxyfile.cmake  IncludeMRPTreeLib.cmake  MANIFEST.txt  MRPTreeConfig.cmake.in  MRPtreeConfig.cmake.in  README.org  TAGS_update.sh  configure.sh  mrptree_config.hpp.cmake
docs/: QuickStart.html  QuickStart.org  changelog.html  changelog.org  roadmap.html  roadmap.org
docs/tree_theory/: MRPoly.org  cell-cell2.tex  fig-1Dfam-00.tex  fig-1Dfam-01.tex  fig-1Dfam-02.tex  fig-1Dfam-03.tex  fig-1Dfam-04.tex  fig-1Dfam-05.tex  fig-1Dfam-06.tex  fig-1Dfam-07.tex  fig-2Dfam.tex  fig-2Dtri3.bak  fig-2dtri0.tex  fig-2dtri1.tex  fig-2dtri2.tex  fig-2dtri3.tex  fig-cell-bdry2.tex  fig-cell-child1.tex  fig-cell-child2.tex  fig-cell-coords.tex  fig-cell-end.tex  fig-cell-grid2.tex  fig-cell-int2.tex  fig-cell-nbr0.tex  fig-cell-parts.tex  fig-cell-vert.tex  makefile  trees.html  trees.org
examples/: README.org  hello_world_adaptive.cpp  hello_world_adaptive.gp  hello_world_cell.cpp  hello_world_mraster.cpp  hello_world_regular.cpp  hello_world_regular.gp  hello_world_tree_adaptive.cpp  hello_world_tree_adaptive.gp  hello_world_tree_regular.cpp  hello_world_tree_regular.gp  mrptree_config.cpp
examples-cookbook/: README.org  recipe-surf-plot-adapt.cpp  recipe-surf-plot-norm.cpp  recipe-surf-plot-rs-quad.cpp  recipe-surf-plot-rs-tri.cpp
examples-func-viz/: README.org  complex_color_image.cpp  complex_magnitude_surface.cpp  curve_plot.cpp  ear_surface.cpp  ear_surface_glue.cpp  holy_wave_surf.cpp  implicit_curve_2d.cpp  implicit_surface.cpp  parametric_curve_3d.cpp  parametric_surface_with_defects.cpp  performance_with_large_surface.cpp  surface_branch_glue.cpp  surface_plot_annular_edge.cpp  surface_plot_corner.cpp  surface_plot_edge.cpp  surface_plot_step.cpp  surface_with_normals.cpp  trefoil.cpp  vector_field_3d.cpp
examples-lib3d/: MR_cell_cplx.hpp  MR_rt_to_cc.hpp  README.org
ftests/: flat_test_tree_01.cpp  flat_test_tree_01.vtu  nan_solver.cpp  nan_solver.vtu  rect_fix_dup.cpp  rect_fix_dup.vtu  rect_fix_nan.cpp  rect_fix_nan.vtu  run_tests.sh  segment_folder.cpp  segment_folder.vtu  triangle_folder.cpp  triangle_folder.vtu
lib/: MR_math.hpp  MR_rect_tree.hpp  xxx.xxx
utests/: check_cell_hexahedron.cpp  check_cell_pyramid.cpp  check_cell_quad.cpp  check_cell_segment.cpp  check_cell_triangle.cpp  geomi_pnt_line_distance.cpp  geomi_seg_isect_type.cpp  geomr_pnt_line_distance.cpp  geomr_pnt_pln_distance.cpp  geomr_pnt_tri_distance.cpp  tree_basics_15b1.cpp  tree_basics_15b3.cpp  tree_basics_7b1.cpp  tree_basics_7b2.cpp  tree_basics_7b3.cpp  tree_basics_7b4.cpp  tree_basics_7b5.cpp  tree_children.cpp  tree_corners.cpp  tree_neighbors.cpp
